first pass adding SSI list
