# cmd/server/search.go
@@ -36,6 +36,7 @@ type searcher struct {
 	Addresses    []*Address
 	Alts         []*Alt
 	DPs          []*DP
+	SSIs         []*SSI
 	sync.RWMutex // protects all above fields
 
 	logger log.Logger
@@ -274,6 +275,74 @@ func (s *searcher) TopDPs(limit int, name string) []DP {
 	return out
 }
 
+func (s *searcher) TopSSIs(limit int, name string) []SSI {
+	name = precompute(name)
+
+	s.RLock()
+	defer s.RUnlock()
+
+	if len(s.SSIs) == 0 {
+		return nil
+	}
+	xs := newLargest(limit)
+
+	for _, ssi := range s.SSIs {
+		xs.add(&item{
+			value:  ssi,
+			weight: jaroWrinkler(ssi.name, name),
+		})
+	}
+
+	out := make([]SSI, 0)
+	for _, thisItem := range xs.items {
+		if v := thisItem; v != nil {
+			ss, ok := v.value.(*SSI)
+			if !ok {
+				continue
+			}
+			ssi := *ss
+			ssi.match = v.weight
+			out = append(out, ssi)
+		}
+	}
+	return out
+}
+
+func (s *searcher) TopSSIAlts(limit int, name string) []SSI {
+	name = precompute(name)
+
+	s.RLock()
+	defer s.RUnlock()
+
+	if len(s.SSIs) == 0 {
+		return nil
+	}
+	xs := newLargest(limit)
+
+	for _, ssi := range s.SSIs {
+		for _, alt := range ssi.SectoralSanction.AlternateNames {
+			xs.add(&item{
+				value:  ssi,
+				weight: jaroWrinkler(alt, name),
+			})
+		}
+	}
+
+	out := make([]SSI, 0)
+	for _, thisItem := range xs.items {
+		if v := thisItem; v != nil {
+			ss, ok := v.value.(*SSI)
+			if !ok {
+				continue
+			}
+			ssi := *ss
+			ssi.match = v.weight
+			out = append(out, ssi)
+		}
+	}
+	return out
+}
+
 // SDN is ofac.SDN wrapped with precomputed search metadata
 type SDN struct {
 	*ofac.SDN
@@ -418,7 +487,34 @@ func precomputeDPs(persons []*ofac.DPL) []*DP {
 	for i := range persons {
 		out[i] = &DP{
 			DeniedPerson: persons[i],
-			name:         precompute(persons[i].Name),
+			name:         precompute(reorderSDNName(persons[i].Name, "individual")),
+		}
+	}
+	return out
+}
+
+type SSI struct {
+	SectoralSanction *ofac.SSI
+	match            float64
+	name             string
+}
+
+func (s SSI) MarshalJSON() ([]byte, error) {
+	return json.Marshal(struct {
+		*ofac.SSI
+		Match float64 `json:"match"`
+	}{
+		s.SectoralSanction,
+		s.match,
+	})
+}
+
+func precomputeSSIs(ssis []*ofac.SSI) []*SSI {
+	out := make([]*SSI, len(ssis))
+	for i, ssi := range ssis {
+		out[i] = &SSI{
+			SectoralSanction: ssi,
+			name:             precompute(reorderSDNName(ssi.Name, ssi.Type)),
 		}
 	}
 	return out
